# rust-web-starter

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: controller.rs  main.rs  router.rs
src/utils/: httpUtils.rs  mod.rs  stringUtils.rs
