[package]
name = "rust-web-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.7",features = ["tracing"] }
serde = {version="1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.1" 
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenv = "0.15.0"
